--- a/composer.json
+++ b/composer.json
@@ -6,12 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "atymic/twitter": "^1.1",
         "facebook/php-business-sdk": "^17.0",
         "guzzlehttp/guzzle": "^7.2",
         "irazasyed/telegram-bot-sdk": "^3.13",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "thujohn/twitter": "^1.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
